[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "st-saca"
version = "0.1.0"
description = "Spatio-temporal adaptive bus-booking dispatching, routing, and pricing experiments."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "tqdm",
    "scikit-learn",
]

[project.optional-dependencies]
routing = ["wandb"]
preprocessing = ["scikit-learn-extra"]
notebook = ["jupyter"]

[tool.setuptools.packages.find]
where = ["src"]
